--- a/ui/package.json
+++ b/ui/package.json
@@ -11,12 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "ol": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.9",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
