--- a/ui/package.json
+++ b/ui/package.json
@@ -11,11 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/ol": "^7.0.0",
+    "@types/react-big-calendar": "^1.8.12",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
-    "ol": "latest",
+    "moment": "^2.30.1",
+    "ol": "^10.2.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.14.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.9",
